fixed password visibility icon overlapping sign up success animation

--- a/Frontend Join/styles/login.css
+++ b/Frontend Join/styles/login.css
@@ -127,6 +127,7 @@ main {
     position: absolute;
     top: 50%;
     transition: all 200ms ease-in-out;
+    z-index: 2;
 }
 
 .signupSuccessAnimationStartpoint {
